<resources>
    <string name="feed_placeholder_title">Feed coming soon</string>
    <string name="feed_placeholder_desc">We are actively working on this section.\nStay tuned!</string>
    <string name="app_name">My Online Time</string>
	<string name="settings_clear_storage">Clear data</string>
    <string name="feed">Feed</string>
    <string name="find">Find</string>
	<string name="notif_offline_mode">(Offline)</string>
	<string name="settings_backgrounds">Profile Background</string>
<string name="bg_setting_global">Global Backgrounds</string>
<string name="bg_setting_my_profile">My Profile Background</string>
<string name="bg_setting_others_profile">Other Profiles Background</string>
<string name="bg_setting_images">Image Backgrounds</string>
<string name="bg_setting_gifs">GIF Backgrounds</string>
	<string name="btn_clear_cache">Clear storage</string>
	<string name="category_app">App</string>
<string name="category_data">Data</string>
<string name="category_cache">Cache</string>
<string name="category_backgrounds">Backgrounds</string>
<string name="category_total">Total</string>
<string name="unit_mb">MB</string>
<string name="format_size_mb">%.1f %s</string>
<string name="format_percent">%d%%</string>
<string name="format_tooltip">%1$s: %2$.1f %3$s (%4$d%% of total)</string>
<string name="title_clear_storage">Clear storage</string>
<string name="btn_clear_data_confirm">Clear</string>
	<string name="prompt_nickname_setup">Enter your name (nickname) to complete registration in My Online Time</string>
<string name="hint_enter_nickname_setup">Enter your name (nickname)</string>
<string name="err_nickname_empty">Nickname cannot be empty!</string>
	<string name="toast_transfer_canceled_restore">Transfer canceled. Please select your current account to return.</string>
	<string name="err_same_account">You are already using this account.</string>
	<string name="dialog_change_email_title">Change email</string>
<string name="dialog_change_email_desc">To change the email linked to your account, click on the input field below and select a Google account that has not been previously registered in My Online Time.</string>
<string name="err_account_already_registered">This account is already registered and cannot be used for data transfer.</string>
<string name="toast_email_changed">Email successfully changed!</string>
<string name="btn_save_uppercase">SAVE</string>
	<string name="dialog_delete_account_title">Delete account?</string>
<string name="dialog_delete_account_desc">After clicking the \"Delete\" button, your account will be permanently deleted from our servers, without the possibility of recovery.\nPlease make an informed decision.\nTo cancel the operation, click \"Cancel\".</string>
<string name="btn_delete_uppercase">DELETE</string>
<string name="btn_cancel_uppercase">CANCEL</string>
<string name="toast_account_deleted">Your account and all data have been successfully deleted.</string>
	<string name="notif_followers">Follower notifications</string>
	<string name="notif_channel_followers_name">You have a new subscriber!</string>
<string name="notif_someone">Someone</string>
<string name="notif_subscribed_to_you">%1$s subscribed to you!</string>
	<string name="toast_compressing_video">Compressing video… Please wait.</string>
	<string name="new_follower_title">You have a new follower!</string>
	<string name="err_empty_nickname">The nickname cannot be empty</string>
<string name="err_server_response">Server response processing error</string>
<string name="video_compressing_warning">Wait, the video is being compressed...</string>
<string name="toast_video_ready">Video successfully prepared!</string>
<string name="err_video_compress">Error compressing video</string>
<string name="err_wait_compressing">Please wait for the video to finish compressing!</string>
    <string name="time">Time</string>
	<string name="err_wait_cooldown">Please wait before changing this information.</string>
	<string name="err_wait_before_change">You need to wait before changing the background!</string>
	<string name="title_search">Search</string>
	<string name="saved_successfully">Saved successfully!</string>
<string name="background_selected_success">Background selected successfully. Press save!</string>
<string name="err_file_size_limit">Selected file exceeds the data limit of</string>
<string name="err_processing_file">Error processing file</string>
	<string name="toast_app_deleted">Deleted</string>
	<string name="text_for_a_week">In a week</string>
<string name="placeholder_dots">...</string>
<string name="placeholder_zero">0</string>
	<string name="placeholder_days_hours">0d 0h</string>
<string name="placeholder_hours_mins">0h 0m</string>
<string name="placeholder_plus_hours_mins">+0h 0m</string>
    <string name="notif_max_count">99+</string>
    <string name="toast_bg_success">Background set successfully!</string>
<string name="toast_bg_error">Error setting background</string>
<string name="err_parse_token">Failed to parse server token</string>
    <string name="err_server_auth">Server auth failed: </string>
    <string name="err_get_user">Get user failed: </string>
	<string name="chooser_select_background">Select background</string>
	<string name="followers_tab_title">Followers</string>
<string name="following_tab_title">Following</string>
<string name="date_format">MM/dd/yyyy</string>
<string name="toast_signed_out">You have signed out</string>
    <string name="default_user_name">User</string>
    <string name="account_id_label">Account ID: %1$s</string>
    <string name="guest_user_name">Guest</string>
    <string name="url_map">http://map.krasnocraft.ru</string>
	<string name="tab_time">Time</string>
    <string name="tab_chart">Charts</string>
    <string name="tab_all_time">All time</string>
	<string name="format_hours_mins">%1$d h %2$d min</string>
<string name="format_mins">%1$d min</string>
    <string name="me">Me</string>
<string name="err_cache_clear">Error clearing cache</string>
    <string name="settings_clear_bg">Clear background</string>
    <string name="toast_bg_cleared">Custom background removed successfully</string>
    <string name="toast_bg_already_clear">Standard background is already active</string>
    <string name="btn_change_background">Change background</string>
    <string name="toast_file_too_large">You have exceeded the file size limit! Please select a file under 30 MB.</string>
    <string name="dialog_how_it_works_title">How is time calculated?</string>
    <string name="dialog_how_it_works_charts">Upon first launch, the app considers your accumulated time over the past week. Charts are drawn strictly according to your statistics and are updated every day.\n\nIf you delete the \"My Online Time\" app, all accumulated time will be reset.</string>
    <string name="dialog_how_it_works_all_time">Initially, the total usage time for the last year is taken into account. If your phone is less than one year old, the time for the corresponding period is used.\n\nThis time starts to accumulate and updates every day. The time increases, and you set new records!\nIf you delete the \"My Online Time\" app, all accumulated time will be reset.</string>
    <string name="btn_ok">Ok</string>
    <string name="title_notifications">Notifications</string>
    <string name="empty_notifications">No notifications.</string>
    <string name="action_view">Tap to view.</string>
    <string name="total_time">Total time</string>
    <string name="achievements">Achievements</string>
    <string name="permission_required">Permission required</string>
    <string name="grant_permission">To show stats, please allow usage access.</string>
    <string name="top_apps">Top for the week</string>
    <string name="posts">Posts</string>
    <string name="liked">Liked</string>
    <string name="format_chart_hour">%1$d h</string>
    <string name="followers">Followers</string>
    <string name="placeholder_dashes">--</string>
    <string name="placeholder_time_dashes">--h --m</string>
    <string name="btn_chart_text">Chart</string>
    <string name="header_settings_sub">Settings</string>
    <string name="notif_general">General notifications</string>
    <string name="notif_records">Records by periods</string>
    <string name="btn_all_time_text">All time</string>
    <string name="following">Following</string>
    <string name="last_week">Last week</string>
    <string name="unit_h">h</string>
    <string name="unit_m">m</string>
    <string-array name="periods_array">
        <item>Last Day</item>
        <item>Yesterday</item>
        <item>Last Week</item>
        <item>Last Month</item>
        <item>Last Year</item>
    </string-array>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="hint_change_photo">Click the button below to change photo</string>
    <string name="btn_change_photo">Change photo</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_about">About me</string>
    <string name="btn_save_changes">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="login_prompt_text">Sign in to find friends, view stats and get to the top!</string>
    <string name="btn_sign_in_google">Sign in with Google</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="btn_follow">Follow</string>
    <string name="btn_unfollow">Unfollow</string>
    <string name="hint_search_friends">Search friends...</string>
    <string name="loading">Loading...</string>
    <string name="empty_list">List is empty</string>
    <string name="no_name">No name</string>
    <string name="new_user">New user</string>
    <string name="guest">Guest</string>
    <string name="msg_profile_saved">Profile saved!</string>
    <string name="msg_avatar_saved">Avatar saved on server!</string>
    <string name="err_server">Server error: </string>
    <string name="err_login_failed">Login failed</string>
    <string name="err_auth">Auth error: </string>
    <string name="err_token">Token error: </string>
    <string name="err_saving">Save error: </string>
    <string name="err_loading">Loading error</string>
    <string name="err_image_processing">Image processing error</string>
    <string name="action_description">Description</string>
    <string name="action_hide">Hide</string>
    <string name="enter_description">Enter description</string>
    <string name="app_hidden">Hidden</string>
    <string name="user_hid_time">User hid their time</string>
    <string name="hidden_time_placeholder">XXXX</string>
<string name="notif_channel_name">Weekly Summary</string>
    <string name="notif_channel_desc">Your weekly screen time report</string>
    <string name="permission_title">Enable access for My Online Time</string>
    <string name="permission_rationale">Usage access is required to display your time. Tap the <font color="#FA8072">\"Enable access\"</font> button, select <font color="#FA8072">My Online Time</font> in the app list, and turn on the access.</string>
    <string name="btn_enable_access">Enable access</string>
    <string name="period_week_label">Past week</string>
    <string name="period_month_label">Past month</string>
    <string name="period_year_label">Past year</string>
    <string name="settings_section_appearance">Appearance</string>
    <string name="settings_theme_auto">Auto</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_section_general">General settings</string>
    <string name="settings_notifications">Notification settings</string>
    <string name="settings_saved">Saved</string>
    <string name="settings_clear_cache">Clear cache data</string>
    <string name="settings_section_other">Other</string>
    <string name="settings_share_app">Share app</string>
    <string name="settings_write_review">Write a review</string>
</resources>