<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/permission_overlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bgDynamic"
    android:clickable="true"
    android:focusable="true"
    android:elevation="20dp"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_title"
        android:textColor="@color/textDynamic"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="32dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_image_border"
        android:padding="1dp"> <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="11dp" 
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/img_permission_example" />

        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_rationale"
        android:textColor="@color/textDynamic"
        android:textSize="14sp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btn_grant_permission"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/btn_enable_access"
        android:background="@drawable/bg_button_grapefruit"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_button_grapefruit"
        android:textColor="@color/textWhiteStatic"
        android:textStyle="bold"
        android:textSize="14sp"/>

</LinearLayout>
